--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -20,6 +20,7 @@
 #  is_admin               :boolean
 #  created_at             :datetime
 #  updated_at             :datetime
+#  address                :string(255)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
