--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -10,6 +10,7 @@
 #  created_at :datetime
 #  updated_at :datetime
 #  slug       :string(255)
+#  price      :float            default(0.0)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
